--- a/CardsGame/Base.lproj/Main.storyboard
+++ b/CardsGame/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SyT-9I-swU">
-    <device id="ipad12_9" orientation="portrait" layout="fullscreen" appearance="light"/>
+    <device id="ipad11_0rounded" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -15,17 +15,17 @@
             <objects>
                 <viewController id="1Hl-6c-DQV" customClass="ConcentrationThemeChooserViewController" customModule="CardsGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5IM-Am-XdL">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jN5-MO-LKO">
-                                <rect key="frame" x="431" y="662" width="162" height="42"/>
+                                <rect key="frame" x="516" y="388.5" width="162" height="42"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Start the Game"/>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="showDetail" identifier="Start Game" id="hID-dY-CGK"/>
+                                    <segue destination="BYZ-38-t0r" kind="showDetail" id="HxK-Mw-Cq0"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -47,7 +47,7 @@
             <objects>
                 <viewController id="6zy-W1-ytW" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YbJ-ID-e0N">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="vBL-jm-rnd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -63,7 +63,7 @@
             <objects>
                 <viewController id="uHW-gE-M5J" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wfH-Ck-YB4">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="6yF-96-d8S"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -84,9 +84,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="VIL-p0-6op" kind="relationship" relationship="viewControllers" id="PHZ-ZK-ePt"/>
                         <segue destination="uHW-gE-M5J" kind="relationship" relationship="viewControllers" id="0Qc-fE-z5v"/>
                         <segue destination="6zy-W1-ytW" kind="relationship" relationship="viewControllers" id="ALB-Tv-vey"/>
+                        <segue destination="P9d-8P-lwB" kind="relationship" relationship="viewControllers" id="NT5-Hh-5Rp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dn4-OI-wew" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -94,36 +94,35 @@
             <point key="canvasLocation" x="-2927" y="812"/>
         </scene>
         <!--Concentration-->
-        <scene sceneID="rju-PR-tIq">
+        <scene sceneID="bWQ-zN-YqZ">
             <objects>
-                <splitViewController allowDoubleColumnStyle="YES" id="VIL-p0-6op" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Concentration" id="FGe-Zq-D4A"/>
-                    <navigationItem key="navigationItem" id="Ffs-AM-SMF"/>
+                <splitViewController allowDoubleColumnStyle="YES" id="P9d-8P-lwB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Concentration" id="7mw-bO-eK5"/>
                     <connections>
-                        <segue destination="SA4-2T-gLN" kind="relationship" relationship="masterViewController" id="6Ax-xk-194"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="detailViewController" id="MLD-wi-MXe"/>
+                        <segue destination="SA4-2T-gLN" kind="relationship" relationship="masterViewController" id="csV-Hz-m90"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="detailViewController" id="9A7-gc-bkI"/>
                     </connections>
                 </splitViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Qkf-0c-oWu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s8G-5R-iUD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2436" y="-25"/>
+            <point key="canvasLocation" x="-2358" y="-26"/>
         </scene>
         <!--The Cards Game-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConcentrationViewController" customModule="CardsGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Unh-lt-hXP">
-                                <rect key="frame" x="16" y="70" width="992" height="232"/>
+                                <rect key="frame" x="16" y="70" width="1162" height="232"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WPL-yt-SF2">
-                                        <rect key="frame" x="0.0" y="0.0" width="992" height="72"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1162" height="72"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jmx-g9-P1L">
-                                                <rect key="frame" x="0.0" y="0.0" width="325.5" height="72"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -132,7 +131,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9j6-VW-n4t">
-                                                <rect key="frame" x="333.5" y="0.0" width="325" height="72"/>
+                                                <rect key="frame" x="390" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -141,7 +140,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hd3-C6-n5a">
-                                                <rect key="frame" x="666.5" y="0.0" width="325.5" height="72"/>
+                                                <rect key="frame" x="780" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -152,10 +151,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Ewa-dr-juI">
-                                        <rect key="frame" x="0.0" y="80" width="992" height="72"/>
+                                        <rect key="frame" x="0.0" y="80" width="1162" height="72"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="800-eL-yCJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="325.5" height="72"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -164,7 +163,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="en4-A4-127">
-                                                <rect key="frame" x="333.5" y="0.0" width="325" height="72"/>
+                                                <rect key="frame" x="390" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -173,7 +172,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e6Q-Gb-sor">
-                                                <rect key="frame" x="666.5" y="0.0" width="325.5" height="72"/>
+                                                <rect key="frame" x="780" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -184,10 +183,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="eX0-s1-9m4">
-                                        <rect key="frame" x="0.0" y="160" width="992" height="72"/>
+                                        <rect key="frame" x="0.0" y="160" width="1162" height="72"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60w-ZE-aG5">
-                                                <rect key="frame" x="0.0" y="0.0" width="325.5" height="72"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -196,7 +195,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Int-Vd-zNO">
-                                                <rect key="frame" x="333.5" y="0.0" width="325" height="72"/>
+                                                <rect key="frame" x="390" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -205,7 +204,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tqN-M1-cxb">
-                                                <rect key="frame" x="666.5" y="0.0" width="325.5" height="72"/>
+                                                <rect key="frame" x="780" y="0.0" width="382" height="72"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
@@ -218,7 +217,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flips: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOI-KP-7A4">
-                                <rect key="frame" x="451" y="1248" width="122.5" height="48"/>
+                                <rect key="frame" x="536" y="701" width="122.5" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -259,7 +258,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SA4-2T-gLN" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XsR-m9-0MK">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1194" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -273,7 +272,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="MLD-wi-MXe"/>
+        <segue reference="9A7-gc-bkI"/>
     </inferredMetricsTieBreakers>
     <resources>
         <namedColor name="AccentColor">
